# nekochan-suggest

./: LICENSE  Makefile  README.md  pyproject.toml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
nekochan_suggest/: __init__.py  annotations.py  cli.py  query.py  ui.py
specs/001-nekochan-suggest/: spec.md
specs/001-nekochan-suggest/checklists/: requirements.md
specs/002-project-init/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-project-init/checklists/: requirements.md
specs/002-project-init/contracts/: cli.md
specs/003-emoji-query/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-emoji-query/checklists/: requirements.md
specs/003-emoji-query/contracts/: cli.md
tests/: test_cli.py
